fix(views): fixed layout on mobile phones

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -32,7 +32,6 @@ body {
 
 .download-card {
   margin: 0 0 30px 0;
-  height: 580px;
 }
 
 .card-img-top {
@@ -91,16 +90,6 @@ body {
   .copyright-text {
     padding-top: 0;
   }
-
-  .download-card {
-    height: 250px;
-  }
-}
-
-@media (max-width: 425px) {
-  .download-card {
-    height: 220px;
-  }
 }
 
 @media (max-width: 375px) {
@@ -117,9 +106,5 @@ body {
   #logo-image {
     width: 48px;
     height: 48px;
-  }
-
-  .download-card {
-    height: 200px;
   }
 }
